--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
   <script src="flutter.js" defer></script>
 </head>
 <body>
+
+    <h1>hello</h1>
+    <input type="text"><br>
+    <input type="password"><br>
+    <?php include 'index.php'; ?>
+
+</html>
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
